crates/roomrs/tests/ui/fail/dao_delete_without_returning.rs
use roomrs::dao;

#[dao]
trait ItemDao {
    #[delete("DELETE FROM items WHERE id = :id")]
    fn delete(&self, id: i64) -> roomrs::Result<Option<i64>>;
}

fn main() {}
